Allow dropdown menus to overflow the toolbar Useful when the toolbar is collapsed Fix #34

--- a/public/css/vroom.css
+++ b/public/css/vroom.css
@@ -84,6 +84,9 @@
   max-width: 700px;
   margin: auto;
 }
+#roomToolBar {
+  overflow: visible !important;
+}
 #inviteMenu {
   min-width: 400px;
 }
